[package]
name = "todo-backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
futures-util = "0.3.15"
serde = "1.0.126"
anyhow = "1.0.42"
serde_json = "1.0.64"
actix-cors = "0.6.0-beta.2"
env_logger = "0.9.0"
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "postgres" ] }
listenfd = "0.3.3"
log = "0.4.14"
derive_more = "0.99"
